changed some stuff

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
-<html lang= "en-ca">
-<head>
-<title>Exercise 2: Images</title>
-<meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="en-ca">
+ <head>
+  <title>Exercise 2: Images</title>
+  <meta charset="UTF-8">
 </head>
 <h1>
   Exercise 2: Images
 </h1>
 
-<!-- Insert Giraffe here and delete this comment -->
+i.imgur.com/CXsgZEL.jpg
 
 <!-- Insert Three images here and delete this comment -->
 
@@ -22,3 +22,4 @@ NE: Not evaluated
 VU: Vulnerable
 CE: Critically endangered
 EX: Extinct
+</html>
