--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   Exercise 2: Images
 </h1>
 
-i.imgur.com/CXsgZEL.jpg
+ <a href="https://en.wikipedia.org/wiki/Giraffe">
+<img src="https://i.imgur.com/CXsgZEL.jpg" alt="a giraffe">
+</a>
 
 <!-- Insert Three images here and delete this comment -->
 
