--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   Exercise 2: Images
 </h1>
 
- <a href="https://en.wikipedia.org/wiki/Giraffe">
+ <a href="https://en.wikipedia.org/wiki/Giraffe" target="_blank">
 <img src="https://i.imgur.com/CXsgZEL.jpg" alt="a giraffe">
 </a>
 
