--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <img src="https://i.imgur.com/CXsgZEL.jpg" alt="a giraffe">
 </a>
 
-<!-- Insert Three images here and delete this comment -->
+<img src="https://i.imgur.com/h9jOG9V.jpg" alt="a leopard" width="200" height="200">
+<img src="https://i.imgur.com/pexSjiA.jpg" alt="apes" width="200" height="200">
+<img src="https://i.imgur.com/oX7QtEi.jpg" alt="a rhino" width="200" height="200">
 
 <h2>
   Status Codes for Engandered Animals
