--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
  <a href="https://en.wikipedia.org/wiki/Giraffe" target="_blank">
 <img src="https://i.imgur.com/CXsgZEL.jpg" alt="a giraffe">
-</a>
-
-<img src="https://i.imgur.com/h9jOG9V.jpg" alt="a leopard" width="200" height="200">
+</a> <br>
+  
+<br> <img src="https://i.imgur.com/h9jOG9V.jpg" alt="a leopard" width="200" height="200">
 <img src="https://i.imgur.com/pexSjiA.jpg" alt="apes" width="200" height="200">
 <img src="https://i.imgur.com/oX7QtEi.jpg" alt="a rhino" width="200" height="200">
 
@@ -20,10 +20,10 @@
   Status Codes for Engandered Animals
 </h2>
 
-<!-- Turn the following into an unordered list and delete this comment -->
-
-NE: Not evaluated
-VU: Vulnerable
-CE: Critically endangered
-EX: Extinct
+<ul>
+<li>NE: Not evaluated</li>
+<li>VU: Vulnerable</li>
+<li>CE: Critically endangered</li>
+<li>EX: Extinct</li>
+  </ul>
 </html>
